# unveil

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  Readme.md  package-lock.json  package.json
src/: api.rs  db.rs  error.rs  main.rs  model.rs  routes.rs  types.rs
src/migrations/: 001_init.sql
src/web/: index.html  index.js
web/: App.tsx  index.css  index.html  index.tsx  request.ts
