[package]
name = "unveil"
version = "0.1.0"
authors = ["sheshbabu <sheshbabu@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.3.0"
chrono = { version = "0.4.13", features = ["serde"] }
sqlx = { version = "0.3", features = [ "postgres", "chrono" ] }
sqlx-pg-migrate = "1.0.4"
include_dir = "0.6.0"
serde = "1.0.106"
serde_json = "1.0.51"
log = "0.4.0"
env_logger = "0.7.1"
dotenv = "0.15.0"